--- a/KVDB.CLI/KVDB.CLI.csproj
+++ b/KVDB.CLI/KVDB.CLI.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KVDB\KVDB.csproj" />
   </ItemGroup>
 
