added get/set commands to cli

--- a/KVDB.CLI/Properties/launchSettings.json
+++ b/KVDB.CLI/Properties/launchSettings.json
@@ -16,6 +16,10 @@
     "CLI Keys": {
       "commandName": "Project",
       "commandLineArgs": "keys -p test"
+    },
+    "CLI Get": {
+      "commandName": "Project",
+      "commandLineArgs": "get -p test test -h"
     }
   }
 }
